--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,33 @@
 # The URL the site will be built for
 base_url = "https://zenyaka.github.io"
 
-# Whether to automatically compile all Sass files in the sass directory
+theme = "terminimal"
 compile_sass = true
-
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+build_search_index = true 
 
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+title = "Rust And The Rest"
+
+taxonomies = [
+    {name = "tags"},
+]
 
 [extra]
-# Put all your custom variables here
+
+# menu is enabled by adding menu_items (optional)
+menu_items = [
+    # each of these is optional, name and url are required
+    # $BASE_URL is going to be substituted by base_url from configuration
+    {name = "blog", url = "$BASE_URL"},
+
+    # tags should only be enabled if you have "tags" taxonomy
+    # see documentation below for more details
+    {name = "tags", url = "$BASE_URL/tags"},
+    {name = "archive", url = "$BASE_URL/archive"},
+    {name = "about me", url = "$BASE_URL/about"},
+
+    # set newtab to true to make the link open in new tab
+    {name = "github", url = "url-to-your-github", newtab = true},
+]
+
+logo_text = "Rust And The Rest"
